# ChangeLog for dev-python/ipython
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.67 2009/10/03 09:55:52 maekke Exp $

  03 Oct 2009; Markus Meier <maekke@gentoo.org> ipython-0.10.ebuild:
  amd64/x86 stable, bug #286859

  29 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  ipython-0.10.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  18 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> ipython-0.9.1.ebuild,
  ipython-0.10.ebuild:
  Now installs doc and examples properly, fixing bug #280279

*ipython-0.10 (17 Aug 2009)

  17 Aug 2009; Patrick Lauer <patrick@gentoo.org> +ipython-0.10.ebuild:
  Bump to 0.10, fixes #281032

  01 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> ipython-0.9.1.ebuild:
  Changed wxwindows to wxwidgets use flag

  03 May 2009; Raúl Porcel <armin76@gentoo.org> ipython-0.9.1.ebuild:
  s390 stable

  18 Mar 2009; Brent Baude <ranger@gentoo.org> ipython-0.9.1.ebuild:
  stable ppc, bug 255051

  15 Mar 2009; Brent Baude <ranger@gentoo.org> ipython-0.9.1.ebuild:
  stable ppc64, bug 255051

  08 Mar 2009; Markus Meier <maekke@gentoo.org> ipython-0.9.1.ebuild:
  amd64/x86 stable, bug #255051

  24 Feb 2009; Joseph Jezak <josejx@gentoo.org> ipython-0.9.1.ebuild:
  Marked ~ppc for bug #242292.

  04 Jan 2009; Raúl Porcel <armin76@gentoo.org> ipython-0.9.1.ebuild:
  Add ~s390 wrt #242294

  28 Oct 2008; Brent Baude <ranger@gentoo.org> ipython-0.9.1.ebuild:
  keyworded ~arch for ppc64, bug 242294

  24 Oct 2008; Raúl Porcel <armin76@gentoo.org> ipython-0.9.1.ebuild:
  Add ~ia64 wrt #242294

  17 Oct 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  smp USE-flag is global now

*ipython-0.9.1 (16 Oct 2008)

  16 Oct 2008; Jesus Rivero <neurogeek@gentoo.org>
  +files/ipython-0.9.1-globalpath.patch, metadata.xml,
  +ipython-0.9.1.ebuild:
  Version bump. Closes bug #237878. Thanks to Justin Riley and Sebeastien
  Fabbro for patch and ebuild
